syntax = "proto3";

package basic_test_action_trigger.v1;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/protoc/pkg/testdata/fixtures/capabilities/actionandtrigger";

import "cre_metadata.proto";

message Config {
  string name = 1;
  int32 number = 2;
}

message TriggerEvent {
  string cool_output = 1;
}

message Input {
  string name = 1;
}

message Output {
  string welcome = 1;
}

service Basic {
  rpc Action(Input) returns (Output);
  rpc Trigger(Config) returns (TriggerEvent) {
    option (cre.metadata.callType) = Trigger;
  }
}